# neutralinojs

./: .gitignore  CMakeLists.txt  buildzri.config.json  cmake_debug.bat  replace_icon.py  换图标.bat  换图标、添加版本信息.bat  编译.bat
api/os/: os.cpp
api/window/: window.cpp
lib/webview/: webview.h
scripts/: bz.py
src/: main.cpp  settings.cpp
